--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey! I'm a big headline</h1>
-<p>Hey! I'm a paragraph element.</p>
-<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title>
+</head>
+<body>
+	<h1>Hey! I'm a big headline</h1>
+	<p>Hey! I'm a <b>paragraph</b> element.</p>
+	<a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link!</a>
+	<p>My name is:<br>
+	Kitty Cat</p>
+	<img src="https://yt3.ggpht.com/a-/AN66SAweDzbDFJIVb8pNnMeLgX4rUbfalvwsVujSlQ=s900-mo-c-c0xffffffff-rj-k-no">
+</body>
+</html>
