--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test page</title>
+	<title>Kitty Cat</title>
 </head>
 <body>
 	<h1>Looking for some catnip?</h1>
